# Crewai_Flow

./: README.md  pyproject.toml
src/secon_project/: crew.py  main.py  practice.py
src/secon_project/config/: agents.yaml  tasks.yaml
