[project]
name = "secon_project"
version = "0.1.0"
description = "secon_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
secon_project = "secon_project.main:run"
run_crew = "secon_project.main:run"
train = "secon_project.main:train"
replay = "secon_project.main:replay"
test = "secon_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
